# sai-notes

./: README.md
150-linux-vlan-bridge/: README.md  cleanup.sh  configure.sh  verify.sh
250-userspace-vlan-bridge/: CMakeLists.txt  README.md
250-userspace-vlan-bridge/src/: CMakeLists.txt  Makefile  switch_config.h  switch_dataplane.cpp  switch_main.cpp  switch_state.cpp  switch_state.h
250-userspace-vlan-bridge/tools/: install_deps.sh  setup.sh
350-userspace-vlan-bridge-with-sai/: CMakeLists.txt  README.md  build.sh  hostinfo.csv
350-userspace-vlan-bridge-with-sai/libsai/: CMakeLists.txt  libsai.cpp  libsai.h  libsai_oid.h  sai_necessary.h
350-userspace-vlan-bridge-with-sai/src/: CMakeLists.txt  switch_config.h  switch_main.cpp
350-userspace-vlan-bridge-with-sai/src/dataplane/: switch_dataplane.cpp
350-userspace-vlan-bridge-with-sai/src/mgmtplane/: switch_mgmtplane.cpp
350-userspace-vlan-bridge-with-sai/src/state/: switch_state.cpp  switch_state.h
350-userspace-vlan-bridge-with-sai/tools/: setup.sh
